--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     I'm dedicated to continuous learning and making a positive impact in the tech industry.
                 </p>
                 <div class="btn-con">
-                    <a href="Portfolio\ResumeCV.pdf" class="main-btn" target="_blank">
+                    <a href="Portfolio/ResumeCV.pdf" class="main-btn" target="_blank">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
