--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ I'm known for being cooperative, detail-oriented, and innovative. My passion for
 aiming to create impactful solutions that can make a real difference.
                     </p>
                     <div class="btn-con">
-                        <a href="C:\Users\Krish\Documents\Python\Portfolio\ResumeCV.pdf" class="main-btn" target="_blank">
+                        <a href="ResumeCV.pdf" class="main-btn" target="_blank">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
