--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ Programmed air pressure rockets through Arduino using c++ and used diverse compo
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="C:\Users\Krish\Documents\Python\Portfolio\ResumeCV.pdf" class="main-btn" target="_blank">
+                                <a href="ResumeCV.pdf" class="main-btn" target="_blank">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
